--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+
+    <style name="TextLightMedium" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_light</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
+    </style>
+
 </resources>
