--- a/app/src/main/res/layout/alert_box_custom.xml
+++ b/app/src/main/res/layout/alert_box_custom.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/_270sdp"
     android:layout_marginStart="@dimen/_12sdp"
     android:layout_marginEnd="@dimen/_12sdp"
     android:background="@color/colorPrimary"
     android:elevation="2dp"
-    android:translationZ="4dp"
+    android:translationZ="3dp"
     app:cardCornerRadius="@dimen/_18sdp"
     app:cardUseCompatPadding="true">
 
