--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,127 @@
     </style>
 
 
+    <style name="MyDatePicker" parent="TextRegularLarge">
+        <item name="colorControlNormal">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/colorAccent2</item>
+        <item name="android:textColorPrimary">@color/colorTertiary</item>
+    </style>
+
+
+    <style name="TextRegularMedium" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
+
+    </style>
+
+    <style name="TextRegularMediumBig" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+
+    </style>
+
+    <style name="TextRegularSmallBig" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
+
+    </style>
+
+
+    <style name="TextRegularSmall" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+
+    </style>
+
+    <style name="TextRegularLarge" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+
+    </style>
+
+    <style name="TextRegularExtraLarge" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_24ssp</item>
+
+    </style>
 
     <style name="TextLightMedium" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/roboto_light</item>
         <item name="android:textColor">@color/colorTertiary</item>
         <item name="android:textSize">@dimen/_12ssp</item>
+
     </style>
+
+    <style name="TextLightSmallBig" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_light</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
+
+    </style>
+
+
+    <style name="TextLightSmall" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_light</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+
+    </style>
+
+    <style name="TextLightLarge" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_light</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+
+    </style>
+
+
+    <style name="TextBoldSmall" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+    </style>
+
+
+    <style name="TextBoldSmallBig" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
+    </style>
+
+
+    <style name="TextBoldMedium" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
+
+    </style>
+
+    <style name="TextBoldMediumBig" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+
+
+    </style>
+
+    <style name="TextBoldLarge" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+    </style>
+
+    <style name="TextBoldExtraLarge" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorTertiary</item>
+        <item name="android:textSize">@dimen/_24ssp</item>
+    </style>
+
+
 
 </resources>
